<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="349dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:text="@string/_10"
        android:gravity="end"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/_7"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/text_view"
        app:layout_constraintTop_toBottomOf="@+id/text_view" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/_8"
        android:textSize="20sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/button_seven"
        app:layout_constraintTop_toBottomOf="@+id/text_view" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/_9"
        android:textSize="20sp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/button_eight"
        app:layout_constraintTop_toBottomOf="@+id/text_view" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/_4"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/text_view"
        app:layout_constraintTop_toBottomOf="@+id/button_seven" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/_5"
        android:textSize="20sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/button_four"
        app:layout_constraintTop_toBottomOf="@+id/button_eight" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/_6"
        android:textSize="20sp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/button_five"
        app:layout_constraintTop_toBottomOf="@+id/button_nine" />

    <Button
        android:id="@+id/button_one"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/_1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/text_view"
        app:layout_constraintTop_toBottomOf="@+id/button_four" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/_2"
        android:textSize="20sp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toEndOf="@+id/button_one"
        app:layout_constraintTop_toTopOf="@+id/button_one" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/_3"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/button_six"
        app:layout_constraintTop_toTopOf="@+id/button_two" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/_0"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/button_one"
        app:layout_constraintTop_toBottomOf="@+id/button_one" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/point"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/button_two"
        app:layout_constraintTop_toTopOf="@+id/button_zero" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/equal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/button_three"
        app:layout_constraintTop_toTopOf="@+id/button_dot" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/plus"
        android:textSize="20sp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toEndOf="@+id/button_nine"
        app:layout_constraintTop_toTopOf="@+id/button_nine" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/minus"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/button_plus"
        app:layout_constraintTop_toTopOf="@+id/button_six" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/multiply"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/button_minus"
        app:layout_constraintTop_toTopOf="@+id/button_three" />

    <Button
        android:id="@+id/button_divid"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/divide"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/button_multiply"
        app:layout_constraintTop_toTopOf="@+id/button_equal" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/c"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/button_divid"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="@+id/button_zero"
        app:layout_constraintTop_toBottomOf="@+id/button_dot" />

</androidx.constraintlayout.widget.ConstraintLayout>